enhanced gruppenchat docs

--- a/docs/erweiterungen.tex
+++ b/docs/erweiterungen.tex
@@ -17,7 +17,9 @@ Gruppenchats stellen nur eine Erweiterung der bestehenden Chatimplementierung da
 \author{Matthias Vonend, Troy Keßler}
 \subsection{Mehrere Chatverläufe pro Nutzer}
 Mehrere Chatverläufe sind ähnlich zu den Gruppenchats eine Erweiterung der bestehenden Chatimplementierung. Nun ist es möglich mehrere Chats zu erstellen und zwischen diesen zu wechseln.
-//TODO @Troy kannst du hier beschreiben wie das im Client ist (also openChat)
+Im Client können die Chats eines Nutzers mit dem Befehl /chats angezeigt werden. 
+Mit dem Befehl /openchat kann er dann diese Chats öffenund gelangt dabei in die Chatansicht wo er sowohl Nachrichten empfangen als auch senden kann.
+Mit dem Befehl /quit kann er die Chatansicht wieder verlassen und einen anderen Chat öffnen.
 
 \author{Matthias Vonend}
 \subsection{Persistentes Speichern der Chatverläufe}\label{persistance}
