--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{microtype}
 
 \usepackage{color}
 \usepackage[colorlinks, linkcolor = black, citecolor = black, filecolor = black, urlcolor = blue]{hyperref} 
@@ -116,8 +117,8 @@
     \end{center}
 
     \tableofcontents
-
-    \vspace{0.2cm}
+    \clearpage
+    %\vspace{0.2cm}
 
     \author{}
     \section{Basisanforderungen}
