--- a/docs/docs.tex
+++ b/docs/docs.tex
@@ -92,7 +92,7 @@
 \newtheorem{satz}{Satz}
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
-
+\setcounter{section}{-1}
 \title{Dokumentation}
 \author{
     Matthias Vonend
@@ -120,6 +120,10 @@
     \clearpage
     %\vspace{0.2cm}
 
+    \author{}
+    \section{Quick Start Guide}
+    // SCHREIBEN
+    Dabei können die Nodes über die Programmargumente eingegeben werden. 
     \author{}
     \section{Basisanforderungen}
         \input{basisanforderungen.tex}
